--- a/locales/zh-CN.yaml
+++ b/locales/zh-CN.yaml
@@ -72,6 +72,8 @@ menus:
   purePermissionButton: 按钮权限
   purePermissionButtonRouter: 路由返回按钮权限
   purePermissionButtonLogin: 登录接口返回按钮权限
+  form: 表单
+  formBasic: 基础表单
 status:
   pureLoad: 加载中...
   pureMessage: 消息
