feat: 新增菜单常用表单

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -75,6 +75,7 @@ menus:
   formTemplate: Form Template
   formGuid: Use Guide
   formBasic: Basic Form
+  formCommon: Common Form
   formComplex: Basic Complex
 status:
   pureLoad: Loading...
